--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
 
     <div class="chart-container3" id='map'>
-      <div class="titles">Latest Map</div>
+      <div class="titles">Hot Spots</div>
       <div class="pop-up3"></div>
       <!-- <svg width="1050px" height="1050px" id='map'></svg>  -->
     </div>
